--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome to</h1>
             <h1><span class="color-pink">Peter Parker</span> World</h1>
@@ -23,7 +23,7 @@
           <img src="jhankar.png">
        </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
        <div class="half-width">
           <img src="jhankar2.png">
        </div>
@@ -34,7 +34,21 @@
            <a class="link-button" target="_blank" href="https://www.w3schools.com">DOWNLOAD CV</a>
         </div>
     </section>
-    
-   
+    <section class="experience-area">
+           <h1>Experience</h1>
+        <div class="flexible-container">
+            <div id="full-stack" class="experence-item">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="color-pink">2020-Present | Pro level Developer</h3>
+                <p>I am a learner Of HTML,CSS and Javascript. I know everything how to build a website. Make friendship every error of coding. I love and enjoy every problem</p>
+            </div>
+            <div id="baby-dev" class="experence-item">
+                <h2>Baby Web Developer</h2>
+                <h3 class="color-pink">2021-2022 | Hero Learner</h3>
+                <p> I am learning of HTML And CSS.I want to become a pro Developer as much as possible. I am trying hard to reach the code of function.Now I am a Hero Learner</p>
+            </div>
+        </div>
+    </section>
+    <footer><p> Peter Parker 2022 | Al Mahfuz 2025 </p></footer>
 </body>
 </html>
