--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My peter portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section>
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="color-pink">Peter Parker</span> World</h1>
+            <h3>Building Climber and Train stopper</h3>
+            <p>You might saw me jumping,climbing buildings,and stopping trains. But nobody pays me cline for that work.For that reason I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
+            <a class="link-button" target="_blank" href="https://www.w3schools.com">Visit</a>
+        </div>
+       <div class="half-width">
+          <img src="jhankar.png">
+       </div>
+    </section>
     
+   
 </body>
 </html>
